[package]
name = "bingpot"
version = "0.1.0"
edition = "2021"
authors = "Michael Pennington"
description = "Simple command line utility and Rust library to download Bing images of the day programmatically."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/michaelpennington/bingpot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
