[package]
name = "bingpot"
version = "0.1.0"
edition = "2021"
authors = ["Michael Pennington"]
description = "Simple command line utility and Rust library to download Bing images of the day programmatically."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/michaelpennington/bingpot"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.24"

[[bin]]
name = "bingpot"
path = "src/main.rs"
